SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/Job_AtharvaBhatkhalkar__c.object-meta.xml
<CustomObject>
    <description>Fields -
Following are the fields need to be created on object Job. A trainee will create the following fields with the mentioned Label name and appropriate data type.</description>
    <label>Job_AtharvaBhatkhalkar</label>
    <nameField>
        <label>Job_AtharvaBhatkhalkar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_AtharvaBhatkhalkar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>