SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should have only two either or values (true/false)
If it has one value it means a job is active
If it has another value it means a job is not active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>