SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field should accept bold text, italic text, underline text, images.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>