SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>This is a Date field which indicates the last date for applying for a job.</description>
    <formula>DATE(YEAR(TODAY()),6,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>