SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Hired_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Hired_Applicants__c</fullName>
    <description>This field indicates the count of the total Hired candidate has applied to this job.
It should be a numeric field and must be calculated automatically as any candidate is hired for a job( Candidate status = ‘Hired’);</description>
    <label>Hired Applicants</label>
    <summaryFilterItems>
        <field>Candidate_AtharvaBhatkhalkar__c.Status__c</field>
        <operation>equals</operation>
        <value>Hired</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_AtharvaBhatkhalkar__c.JOB__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>