SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field indicates the relation of job record to the Contact record.</description>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job_AtharvaBhatkhalkar</relationshipLabel>
    <relationshipName>Job_AtharvaBhatkhalkar1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>