SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Number_of_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Positions__c</fullName>
    <description>This field indicates how many numbers of positions are available for this position
It should accept only numeric values up to 10 digits and not any text value.</description>
    <inlineHelpText>kindly enter the number of positions</inlineHelpText>
    <label>Number of Positions</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>