SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Qualification_Required__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Required__c</fullName>
    <label>Qualification_Required</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Job_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bcom</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BTech.</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>