SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <label>Required_Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Job_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>People Skills</fullName>
            </value>
            <value>
                <fullName>Team Player</fullName>
            </value>
            <value>
                <fullName>Self Management</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>