SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_Offered__c</fullName>
    <description>This field indicates how much salary is offered for this job.
It should accept only numeric values up to 5 digits and not any text value.
Salary should be displayed in dollar format.</description>
    <label>Salary Offered</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>