SalesforceTraining/force-app/main/default/objects/Job_AtharvaBhatkhalkar__c/fields/Total_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicants__c</fullName>
    <description>This field indicates the count of the total candidate has applied to this job.
It should be a numeric field and must be calculated automatically as any candidate is applied for a job</description>
    <label>Total Applicants</label>
    <summaryForeignKey>Candidate_AtharvaBhatkhalkar__c.JOB__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>